[package]
name = "fust"
authors = ["Don <iamshixudong@gmail.com> <x.shi.2@umail.leidenuniv.nl>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpi-sys = "0.2.1"
zmq = "0.10.0"
mpi = { version = "0.7.0", features = ["user-operations", "derive"] }
